--- a/src/ui/static/css/main.css
+++ b/src/ui/static/css/main.css
@@ -5,8 +5,14 @@
    ========================================================================== */
 
 
+.links {
+	padding-top: 40px;
+}
 
-
+.chart {
+	width:100%;
+	height:400px;
+}
 
 
 
